add some meta data and preview image

--- a/index.html
+++ b/index.html
@@ -1,9 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>three.js canvas - camera - orthographic</title>
+    <title>GPU rigid bodies in three.js</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
+    <meta name="twitter:creator" content="@schteppe" />
+    <meta property="og:title" content="GPU rigid bodies in three.js" />
+    <meta property="og:description" content="Play around with a massive amount of rigid bodies in this demo." />
+    <meta property="og:image" content="gpu-rigid-bodies.jpg" />
     <style>
         body {
             color: #ffffff;
