--- a/index.html
+++ b/index.html
@@ -554,6 +554,66 @@ void main() {
 }
 </script>
 
+
+<!--
+    Render body instances vertex shader
+    Copy of THREE.ShaderLib.phong + modifications to render instances
+-->
+<script id="renderBodiesVertex" type="x-shader/x-vertex">
+uniform sampler2D bodyPosTex;
+uniform sampler2D bodyQuatTex;
+attribute float bodyIndex;
+#define PHONG
+varying vec3 vViewPosition;
+#ifndef FLAT_SHADED
+    varying vec3 vNormal;
+#endif
+#include <common>
+#include <uv_pars_vertex>
+#include <uv2_pars_vertex>
+#include <displacementmap_pars_vertex>
+#include <envmap_pars_vertex>
+#include <color_pars_vertex>
+#include <fog_pars_vertex>
+#include <morphtarget_pars_vertex>
+#include <skinning_pars_vertex>
+#include <shadowmap_pars_vertex>
+#include <logdepthbuf_pars_vertex>
+#include <clipping_planes_pars_vertex>
+void main() {
+    #include <uv_vertex>
+    #include <uv2_vertex>
+    #include <color_vertex>
+    vec2 bodyUV = indexToUV(bodyIndex,bodyTextureResolution);
+    vColor = vec3((floor(bodyUV*3.0)+1.0)/3.0,0);
+    #include <beginnormal_vertex>
+    #include <morphnormal_vertex>
+    #include <skinbase_vertex>
+    #include <skinnormal_vertex>
+    vec3 bodyPos = texture2D(bodyPosTex,bodyUV).xyz;
+    vec4 bodyQuat = texture2D(bodyQuatTex,bodyUV).xyzw;
+    objectNormal.xyz = vec3_applyQuat(objectNormal.xyz, bodyQuat);
+    #include <defaultnormal_vertex>
+#ifndef FLAT_SHADED
+    vNormal = normalize( transformedNormal );
+#endif
+    #include <begin_vertex>
+    transformed.xyz = vec3_applyQuat(transformed.xyz, bodyQuat);
+    transformed.xyz += bodyPos;
+    #include <displacementmap_vertex>
+    #include <morphtarget_vertex>
+    #include <skinning_vertex>
+    #include <project_vertex>
+    #include <logdepthbuf_vertex>
+    #include <clipping_planes_vertex>
+    vViewPosition = - mvPosition.xyz;
+    #include <worldpos_vertex>
+    #include <envmap_vertex>
+    #include <shadowmap_vertex>
+    #include <fog_vertex>
+}
+</script>
+
 <script src="lib/three.min.js"></script>
 <script src="lib/stats.min.js"></script>
 <script src="lib/dat.gui.min.js"></script>
