--- a/index.html
+++ b/index.html
@@ -111,14 +111,24 @@ vec3 vec3_applyQuat(vec3 v, vec4 q){
     );
 }
 
+mat3 transpose2( const in mat3 v ) {
+    mat3 tmp;
+    tmp[0] = vec3(v[0].x, v[1].x, v[2].x);
+    tmp[1] = vec3(v[0].y, v[1].y, v[2].y);
+    tmp[2] = vec3(v[0].z, v[1].z, v[2].z);
+    return tmp;
+}
+
 mat3 quat2mat(vec4 q){
     float x = q.x;
     float y = q.y;
     float z = q.z;
     float w = q.w;
+
     float x2 = x + x;
     float y2 = y + y;
     float z2 = z + z;
+
     float xx = x * x2;
     float xy = x * y2;
     float xz = x * z2;
@@ -136,18 +146,21 @@ mat3 quat2mat(vec4 q){
     );
 }
 
-mat3 transpose2( const in mat3 v ) {
-    mat3 tmp;
-    tmp[0] = vec3(v[0].x, v[1].x, v[2].x);
-    tmp[1] = vec3(v[0].y, v[1].y, v[2].y);
-    tmp[2] = vec3(v[0].z, v[1].z, v[2].z);
-    return tmp;
-}
-
 mat3 invInertiaWorld(vec4 q, vec3 invInertia){
     mat3 R = quat2mat(q);
-    mat3 I = mat3(invInertia.x,0,0,  0,invInertia.y,0,  0,0,invInertia.z);
-    return R * I * transpose2(R);
+    mat3 Rscaled = R;
+
+    Rscaled[0] *= invInertia; // Scale each column... todo: check if glsl mat3[] is rows
+    Rscaled[1] *= invInertia;
+    Rscaled[2] *= invInertia;
+
+    /*
+    Rscaled[0].xyz *= invInertia.x;
+    Rscaled[1].xyz *= invInertia.y;
+    Rscaled[2].xyz *= invInertia.z;
+    */
+
+    return Rscaled * transpose2(R);
 }
 
 </script>
@@ -344,7 +357,7 @@ void main() {
                             vec3 relAngularVel = angularVelocity - neighborAngularVelocity;
 
                             vec3 relTangentVel = (relVel - dot(relVel, dir) * dir) + cross(radius*dir, relAngularVel);
-                            torque += friction * cross(radius*dir, relTangentVel);
+                            torque -= friction * cross(radius*dir, relTangentVel);
                         }
                     }
                 }
@@ -353,8 +366,8 @@ void main() {
     }
 
     // Friction against walls
-    vec3 boxMin = vec3(0.0);
-    vec3 boxMax = vec3(1.0);
+    vec3 boxMin = vec3(0.3);
+    vec3 boxMax = vec3(0.7);
     vec3 dirs[3];
     dirs[0] = vec3(1,0,0);
     dirs[1] = vec3(0,1,0);
