--- a/index.html
+++ b/index.html
@@ -160,7 +160,14 @@ mat3 invInertiaWorld(vec4 q, vec3 invInertia){
     Rscaled[2].xyz *= invInertia.z;
     */
 
-    return Rscaled * transpose2(R);
+    mat3 I = mat3(
+        invInertia.x, 0, 0,
+        0, invInertia.y, 0,
+        0, 0, invInertia.z
+    );
+
+    //return Rscaled * transpose2(R);
+    return transpose2(R) * I * R;
 }
 
 </script>
