ground friction... probably right!

--- a/index.html
+++ b/index.html
@@ -226,6 +226,7 @@ uniform vec3 gridPos;
 
 uniform sampler2D posTex;
 uniform sampler2D velTex;
+uniform sampler2D bodyAngularVelTex;
 uniform sampler2D gridTex;
 
 vec3 particleForce(float STIFFNESS, float DAMPING, float DAMPING_T, float distance, vec3 xi, vec3 xj, vec3 vi, vec3 vj){
@@ -244,9 +245,12 @@ void main() {
     int particleIndex = uvToIndex(uv, resolution);
 
     // Get id and position of current
-    vec3 position = texture2D(posTex, uv).xyz;
+    vec4 positionAndBodyId = texture2D(posTex, uv);
+    vec3 position = positionAndBodyId.xyz;
+    float bodyId = positionAndBodyId.w;
     vec3 velocity = texture2D(velTex, uv).xyz;
     vec3 particleGridPos = worldPosToGridPos(position, gridPos, cellSize);
+    vec3 bodyAngularVelocity = texture2D(bodyAngularVelTex, indexToUV(bodyId,bodyTextureResolution)).xyz;
 
     vec3 force = vec3(0);
     ivec3 iGridRes = ivec3(gridResolution);
@@ -263,7 +267,10 @@ void main() {
                     neighborCellTexUV += vec2(0.5) / (2.0 * gridTexRes); // center to "cell pixel"
                     int neighborIndex = int(floor(texture2D(gridTex, neighborCellTexUV).x-1.0 + 0.5)); // indices are stored incremented by 1
                     vec2 neighborUV = indexToUV(float(neighborIndex), resolution);
-                    vec3 neighborPosition = texture2D(posTex, neighborUV).xyz;
+                    vec4 neighborPositionAndBodyId = texture2D(posTex, neighborUV);
+                    vec3 neighborPosition = neighborPositionAndBodyId.xyz;
+                    float neighborBodyId = neighborPositionAndBodyId.w;
+                    vec3 neighborAngularVelocity = texture2D(bodyAngularVelTex, indexToUV(neighborBodyId,bodyTextureResolution)).xyz;
                     vec3 neighborVelocity = texture2D(velTex, neighborUV).xyz;
                     if(neighborIndex >=0 && neighborIndex != particleIndex && iNeighborCellGridPos.x>=0 && iNeighborCellGridPos.y>=0 && iNeighborCellGridPos.z>=0 && iNeighborCellGridPos.x<iGridRes.x && iNeighborCellGridPos.y<iGridRes.y && iNeighborCellGridPos.z<iGridRes.z){ // Not self!
                         // Apply contact force from neighbor
@@ -281,6 +288,7 @@ void main() {
     // Apply force from ground / bounds
     vec3 boxMin = vec3(0.3);
     vec3 boxMax = vec3(0.7);
+    /*
     vec3 dirs[3];
     dirs[0] = vec3(1,0,0);
     dirs[1] = vec3(0,1,0);
@@ -297,6 +305,16 @@ void main() {
             dir = -dir;
             force -= -( stiffness * (x - boxMax[i]) * dir - damping * relVel);
         }
+    }
+    */
+
+
+    vec3 y = vec3(0,1,0);
+    float x = dot(y,position) - radius;
+    if(x < boxMin.y){
+        force += -( stiffness * (x - boxMin.y) * y + damping * dot(velocity,y) * y);
+        vec3 tangentVel = (cross(radius*y, bodyAngularVelocity) + velocity - dot(velocity,y) * y);
+        force -= friction * tangentVel;
     }
 
     // Sphere interaction
@@ -331,9 +349,11 @@ void main() {
     int particleIndex = uvToIndex(uv, resolution);
 
     // Get id and position of current
-    vec3 position = texture2D(posTex, uv).xyz;
+    vec4 positionAndBodyId = texture2D(posTex, uv);
+    vec3 position = positionAndBodyId.xyz;
+    float bodyId = positionAndBodyId.w;
     vec3 velocity = texture2D(velTex, uv).xyz;
-    vec3 angularVelocity = texture2D(bodyAngularVelTex, uv).xyz;
+    vec3 angularVelocity = texture2D(bodyAngularVelTex, indexToUV(bodyId, bodyTextureResolution)).xyz;
     vec3 particleGridPos = worldPosToGridPos(position, gridPos, cellSize);
     ivec3 iGridRes = ivec3(gridResolution);
     vec2 gridTexRes = 2.0 * gridResolution.xy * vec2(gridPotZ);
@@ -364,7 +384,7 @@ void main() {
                             vec3 relAngularVel = angularVelocity - neighborAngularVelocity;
 
                             vec3 relTangentVel = (relVel - dot(relVel, dir) * dir) + cross(radius*dir, relAngularVel);
-                            torque -= friction * cross(radius*dir, relTangentVel);
+                            //torque -= friction * cross(radius*dir, relTangentVel);
                         }
                     }
                 }
@@ -375,23 +395,31 @@ void main() {
     // Friction against walls
     vec3 boxMin = vec3(0.3);
     vec3 boxMax = vec3(0.7);
+    /*
     vec3 dirs[3];
     dirs[0] = vec3(1,0,0);
     dirs[1] = vec3(0,1,0);
     dirs[2] = vec3(0,0,1);
     for(int i=0; i<3; i++){
         vec3 dir = dirs[i];
-        vec3 relVel = velocity - vec3(0);
-        vec3 relAngularVel = angularVelocity - vec3(0);
+        vec3 relVel = velocity;
+        vec3 relAngularVel = angularVelocity;
         if(dot(dir,position) - radius < boxMin[i]){
-            vec3 relTangentVel = relVel - dot(relVel, dir) * dir + cross(radius * dir, relAngularVel);
-            torque += friction * cross(radius * dir, relTangentVel);
+            vec3 relTangentVel = (relVel - dot(relVel, dir) * dir) + cross(radius * dir, relAngularVel);
+            torque -= friction * cross(radius * dir, relTangentVel);
         }
         if(dot(dir,position) + radius > boxMax[i]){
             dir = -dir;
             vec3 relTangentVel = relVel - dot(relVel, dir) * dir + cross(radius * dir, relAngularVel);
-            torque += friction * cross(radius * dir, relTangentVel);
+            //torque += 0.0*friction * cross(radius * dir, relTangentVel);
         }
+    }
+    */
+
+    vec3 y = vec3(0,1,0);
+    if(dot(y,position) - radius < boxMin.y){
+        vec3 relTangentVel = (velocity - dot(velocity, y) * y) + cross(radius * y, angularVelocity);
+        torque += friction * cross(radius * y, relTangentVel);
     }
 
     gl_FragColor = vec4(torque, 0.0);
