--- a/index.html
+++ b/index.html
@@ -384,7 +384,7 @@ void main() {
                             vec3 relAngularVel = angularVelocity - neighborAngularVelocity;
 
                             vec3 relTangentVel = (relVel - dot(relVel, dir) * dir) + cross(radius*dir, relAngularVel);
-                            //torque -= friction * cross(radius*dir, relTangentVel);
+                            torque += friction * cross(radius*dir, relTangentVel);
                         }
                     }
                 }
@@ -395,11 +395,11 @@ void main() {
     // Friction against walls
     vec3 boxMin = vec3(0.3);
     vec3 boxMax = vec3(0.7);
-    /*
     vec3 dirs[3];
     dirs[0] = vec3(1,0,0);
     dirs[1] = vec3(0,1,0);
     dirs[2] = vec3(0,0,1);
+    /*
     for(int i=0; i<3; i++){
         vec3 dir = dirs[i];
         vec3 relVel = velocity;
@@ -411,7 +411,7 @@ void main() {
         if(dot(dir,position) + radius > boxMax[i]){
             dir = -dir;
             vec3 relTangentVel = relVel - dot(relVel, dir) * dir + cross(radius * dir, relAngularVel);
-            //torque += 0.0*friction * cross(radius * dir, relTangentVel);
+            torque += friction * cross(radius * dir, relTangentVel);
         }
     }
     */
