--- a/index.html
+++ b/index.html
@@ -286,8 +286,8 @@ void main() {
     }
 
     // Apply force from ground / bounds
-    vec3 boxMin = vec3(0.3);
-    vec3 boxMax = vec3(0.7);
+    vec3 boxMin = vec3(-0.3, 0.0, -0.3);
+    vec3 boxMax = vec3(0.3, 1.0, 0.3);
     vec3 dirs[3];
     dirs[0] = vec3(1,0,0);
     dirs[1] = vec3(0,1,0);
@@ -394,8 +394,8 @@ void main() {
     }
 
     // Friction against walls
-    vec3 boxMin = vec3(0.3);
-    vec3 boxMax = vec3(0.7);
+    vec3 boxMin = vec3(-0.3, 0.0, -0.3);
+    vec3 boxMax = vec3(0.3, 1.0, 0.3);
     vec3 dirs[3];
     dirs[0] = vec3(1,0,0);
     dirs[1] = vec3(0,1,0);
@@ -649,6 +649,62 @@ void main() {
     #include <fog_vertex>
 }
 </script>
+
+<script id="renderBodiesDepth" type="x-shader/x-vertex">
+#define PHONG
+uniform sampler2D bodyPosTex;
+uniform sampler2D bodyQuatTex;
+attribute float bodyIndex;
+varying vec3 vViewPosition;
+#ifndef FLAT_SHADED
+varying vec3 vNormal;
+#endif
+#include <common>
+#include <uv_pars_vertex>
+#include <uv2_pars_vertex>
+#include <displacementmap_pars_vertex>
+#include <envmap_pars_vertex>
+#include <color_pars_vertex>
+#include <fog_pars_vertex>
+#include <morphtarget_pars_vertex>
+#include <skinning_pars_vertex>
+#include <shadowmap_pars_vertex>
+#include <logdepthbuf_pars_vertex>
+#include <clipping_planes_pars_vertex>
+void main() {
+    #include <uv_vertex>
+    #include <uv2_vertex>
+    #include <color_vertex>
+    #include <beginnormal_vertex>
+    #include <morphnormal_vertex>
+    #include <skinbase_vertex>
+    #include <skinnormal_vertex>
+    #include <defaultnormal_vertex>
+    #ifndef FLAT_SHADED
+    vNormal = normalize( transformedNormal );
+    #endif
+    #include <begin_vertex>
+
+    vec2 bodyUV = indexToUV(bodyIndex,bodyTextureResolution);
+    vec3 bodyPos = texture2D(bodyPosTex,bodyUV).xyz;
+    vec4 bodyQuat = texture2D(bodyQuatTex,bodyUV).xyzw;
+    transformed.xyz = vec3_applyQuat(transformed.xyz, bodyQuat);
+    transformed.xyz += bodyPos;
+
+    #include <displacementmap_vertex>
+    #include <morphtarget_vertex>
+    #include <skinning_vertex>
+    #include <project_vertex>
+    #include <logdepthbuf_vertex>
+    #include <clipping_planes_vertex>
+    vViewPosition = - mvPosition.xyz;
+    #include <worldpos_vertex>
+    #include <envmap_vertex>
+    #include <shadowmap_vertex>
+    #include <fog_vertex>
+}
+</script>
+
 
 <!--
     Render body instances vertex shader
