try to balance the z tiling, but failed

--- a/index.html
+++ b/index.html
@@ -57,31 +57,18 @@ vec3 worldPosToGridPos(vec3 particlePos, vec3 gridPos, vec3 cellSize){
 }
 // Convert grid position to UV coord in the grid texture
 vec2 gridPosToGridUV(vec3 gridPos, int subIndex, vec3 gridRes){
-    gridPos = clamp(gridPos, vec3(0), gridRes-1.0); // Keep within limits
-    vec2 gridTexRes = 2.0 * gridRes.xy * vec2(1, gridRes.z);
-    vec2 gridUV = 2.0 * gridPos.xy / gridTexRes;
-    gridUV.y += gridPos.z / gridRes.z; // Move up to correct z section
-    // Choose sub pixel
-    float fSubIndex = float(subIndex);
-    gridUV += vec2(mod(fSubIndex,2.0), fSubIndex/2.0) / gridTexRes;
-    return gridUV;
-}
-vec2 gridPosToGridUV2(vec3 gridPos, int subIndex, vec3 gridRes){
-    float fGridPotZ = float(gridPotZ);
-
     gridPos = clamp(gridPos, vec3(0), gridRes-vec3(1)); // Keep within limits
 
-    vec2 gridTexRes = gridRes.xy * vec2(fGridPotZ * 2.0);
-    vec2 gridUV = 2.0 * gridPos.xy / vec2(gridTexRes);
+    vec2 gridUV = 2.0 * gridPos.xy / gridTextureResolution;
 
     // move to correct z square
-    vec2 zPos = vec2( mod(gridPos.z, fGridPotZ), floor(gridPos.z / fGridPotZ) );
-    zPos /= vec2(fGridPotZ);
+    vec2 zPos = vec2( mod(gridPos.z, gridZTiling.x), floor(gridPos.z / gridZTiling.y) );
+    zPos /= gridZTiling;
     gridUV += zPos;
 
     // Choose sub pixel
     float fSubIndex = float(subIndex);
-    gridUV += vec2( mod(fSubIndex,2.0), floor(fSubIndex/2.0) ) / gridTexRes;
+    gridUV += vec2( mod(fSubIndex,2.0), floor(fSubIndex/2.0) ) / gridTextureResolution;
 
     return gridUV;
 }
@@ -196,9 +183,8 @@ void main() {
     vec3 particlePos = texture2D( posTex, particleUV ).xyz;
     // Get particle cell position
     vec3 cellPos = worldPosToGridPos(particlePos, gridPos, cellSize);
-    vec2 gridUV = gridPosToGridUV2(cellPos, 0, gridResolution);
-    vec2 gridTexRes = 2.0 * gridResolution.xy * vec2(gridPotZ);
-    gridUV += vec2(1) / gridTexRes;// center to cell
+    vec2 gridUV = gridPosToGridUV(cellPos, 0, gridResolution);
+    gridUV += vec2(1) / gridTextureResolution;// center to cell
     gl_PointSize = 2.0; // Cover 4 pixels in the grid texture
     gl_Position = vec4(2.0*(gridUV-0.5), 0, 1);
 }
@@ -254,7 +240,6 @@ void main() {
 
     vec3 force = vec3(0);
     ivec3 iGridRes = ivec3(gridResolution);
-    vec2 gridTexRes = 2.0 * gridResolution.xy * vec2(gridPotZ);
 
     // Neighbor collisions
     for(int i=-1; i<2; i++){
@@ -263,8 +248,8 @@ void main() {
                 vec3 neighborCellGridPos = particleGridPos + vec3(i,j,k);
                 ivec3 iNeighborCellGridPos = ivec3(particleGridPos) + ivec3(i,j,k);
                 for(int l=0; l<4; l++){
-                    vec2 neighborCellTexUV = gridPosToGridUV2(neighborCellGridPos, l, gridResolution);
-                    neighborCellTexUV += vec2(0.5) / (2.0 * gridTexRes); // center to "cell pixel"
+                    vec2 neighborCellTexUV = gridPosToGridUV(neighborCellGridPos, l, gridResolution);
+                    neighborCellTexUV += vec2(0.5) / (2.0 * gridTextureResolution); // center to "cell pixel"
                     int neighborIndex = int(floor(texture2D(gridTex, neighborCellTexUV).x-1.0 + 0.5)); // indices are stored incremented by 1
                     vec2 neighborUV = indexToUV(float(neighborIndex), resolution);
                     vec4 neighborPositionAndBodyId = texture2D(posTex, neighborUV);
@@ -347,7 +332,6 @@ void main() {
     vec3 angularVelocity = texture2D(bodyAngularVelTex, indexToUV(bodyId, bodyTextureResolution)).xyz;
     vec3 particleGridPos = worldPosToGridPos(position, gridPos, cellSize);
     ivec3 iGridRes = ivec3(gridResolution);
-    vec2 gridTexRes = 2.0 * gridResolution.xy * vec2(gridPotZ);
 
     vec3 torque = vec3(0);
 
@@ -358,8 +342,8 @@ void main() {
                 vec3 neighborCellGridPos = particleGridPos + vec3(i,j,k);
                 ivec3 iNeighborCellGridPos = ivec3(particleGridPos) + ivec3(i,j,k);
                 for(int l=0; l<4; l++){
-                    vec2 neighborCellTexUV = gridPosToGridUV2(neighborCellGridPos, l, gridResolution);
-                    neighborCellTexUV += vec2(0.5) / (2.0 * gridTexRes); // center to "cell pixel"
+                    vec2 neighborCellTexUV = gridPosToGridUV(neighborCellGridPos, l, gridResolution);
+                    neighborCellTexUV += vec2(0.5) / (2.0 * gridTextureResolution); // center to "cell pixel"
                     int neighborIndex = int(floor(texture2D(gridTex, neighborCellTexUV).x-1.0 + 0.5)); // indices are stored incremented by 1
                     vec2 neighborUV = indexToUV(float(neighborIndex), resolution);
                     vec3 neighborPosition = texture2D(posTex, neighborUV).xyz;
