update image, title etc

--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>GPU rigid bodies in three.js</title>
+    <title>GPU physics | schteppe | three.js</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
     <meta name="twitter:creator" content="@schteppe" />
     <meta property="og:title" content="GPU rigid bodies in three.js" />
     <meta property="og:description" content="Play around with a massive amount of rigid bodies in this demo." />
-    <meta property="og:image" content="gpu-rigid-bodies.jpg" />
+    <meta property="og:image" content="gpu-physics.jpg" />
     <style>
         body {
             color: #ffffff;
@@ -38,7 +38,7 @@
 
 <div id="container"></div>
 <div id="info">
-    <b>GPGPU rigid bodies</b> | Created by <a href="http://twitter.com/schteppe" target="_blank">@schteppe</a> | Powered by <a href="http://github.com/mrdoob/three.js" target="_blank">three.js</a>
+    <b>GPU physics</b> | Created by <a href="http://twitter.com/schteppe" target="_blank">@schteppe</a> | Powered by <a href="http://github.com/mrdoob/three.js" target="_blank">three.js</a>
 </div>
 
 <script id="sharedShaderCode" type="x-shader/x-fragment">
