fix og:image etc

--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
     <meta name="twitter:creator" content="@schteppe" />
     <meta property="og:title" content="GPU rigid bodies in three.js" />
     <meta property="og:description" content="Play around with a massive amount of rigid bodies in this demo." />
-    <meta property="og:image" content="gpu-physics.jpg" />
+    <meta property="og:url" content="https://schteppe.github.io/gpu-physics.js/" />
+    <meta property="og:image" content="https://schteppe.github.io/gpu-physics.js/gpu-physics.jpg" />
+
     <style>
         body {
             color: #ffffff;
@@ -38,7 +40,7 @@
 
 <div id="container"></div>
 <div id="info">
-    <b>GPU physics</b> | Created by <a href="http://twitter.com/schteppe" target="_blank">@schteppe</a> | Powered by <a href="http://github.com/mrdoob/three.js" target="_blank">three.js</a>
+    <b>gpu physics</b> by <a href="http://twitter.com/schteppe">@schteppe</a> | <a href="https://github.com/schteppe/gpu-physics.js">github</a>
 </div>
 
 <script id="sharedShaderCode" type="x-shader/x-fragment">
