--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <meta property="og:title" content="GPU rigid bodies in three.js" />
     <meta property="og:description" content="Play around with a massive amount of rigid bodies in this demo." />
     <meta property="og:url" content="https://schteppe.github.io/gpu-physics.js/" />
+    <meta property="og:type" content="website" />
     <meta property="og:image" content="https://schteppe.github.io/gpu-physics.js/gpu-physics.jpg" />
 
     <style>
