updated titles and stuff

--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>GPU physics | schteppe | three.js</title>
+    <title>gpu-physics.js by schteppe</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
     <meta name="twitter:creator" content="@schteppe" />
-    <meta property="og:title" content="GPU rigid bodies in three.js" />
+    <meta property="og:title" content="gpu-physics.js by schteppe" />
     <meta property="og:description" content="Play around with a massive amount of rigid bodies in this demo." />
     <meta property="og:url" content="https://schteppe.github.io/gpu-physics.js/" />
     <meta property="og:type" content="website" />
