added video link

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 
 <div id="container"></div>
 <div id="info">
-    <b>gpu physics</b> by <a href="http://twitter.com/schteppe">@schteppe</a> | <a href="https://github.com/schteppe/gpu-physics.js">github</a>
+    <b>gpu physics</b> by <a href="http://twitter.com/schteppe">@schteppe</a> | <a href="https://www.youtube.com/watch?v=PfCZEQxTvqA">video</a> | <a href="https://github.com/schteppe/gpu-physics.js">github</a>
 </div>
 
 <script id="sharedShaderCode" type="x-shader/x-fragment">
