More work on an api. Share canvas/context with other three.js renderer

--- a/index.html
+++ b/index.html
@@ -715,7 +715,8 @@ void main() {
 <script src="lib/dat.gui.min.js"></script>
 <script src="lib/three.orbitcontrols.js"></script>
 <script src="lib/three.transformcontrols.js"></script>
-<script src="main.js"></script>
-
+<!--<script src="main.js"></script>-->
+<script src="src/index.js"></script>
+<script src="main-api.js"></script>
 </body>
 </html>
