--- a/index.html
+++ b/index.html
@@ -281,13 +281,14 @@ void main() {
             force -= friction * tangentVel;
         }
     }
-
+/*
     // Sphere interaction
     vec3 r = position - interactionSpherePos;
     float len = length(r);
     if(len > 0.0 && len < interactionSphereRadius+radius){
         force += particleForce(stiffness, damping, friction, radius + interactionSphereRadius, position, interactionSpherePos, velocity, vec3(0));
     }
+*/
 
     gl_FragColor = vec4(force, 1.0);
 }
@@ -455,8 +456,8 @@ varying vec3 vBodyForce;
 void main() {
     vec2 particleUV = indexToUV( particleIndex, resolution );
     vec3 particleForce = texture2D( particleForceTex, particleUV ).xyz;
-    vBodyForce = particleForce;
     vec2 bodyUV = indexToUV( bodyIndex, bodyTextureResolution );
+    vBodyForce = particleForce;
     bodyUV += vec2(0.5) / bodyTextureResolution;// center to pixel
     gl_PointSize = 1.0;
     gl_Position = vec4(2.0 * (bodyUV - 0.5), -particleIndex / (resolution.x*resolution.y), 1); // have to do this to make additive work?
@@ -715,7 +716,9 @@ void main() {
 <script src="lib/dat.gui.min.js"></script>
 <script src="lib/three.orbitcontrols.js"></script>
 <script src="lib/three.transformcontrols.js"></script>
-<!--<script src="main.js"></script>-->
+<!--
+<script src="main.js"></script>
+-->
 <script src="src/index.js"></script>
 <script src="main-api.js"></script>
 </body>
